--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -96,6 +96,17 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 src_filter = +<examples/VL53L5CX>
+monitor_speed = 112500
+lib_deps = 
+	pololu/VL53L0X@^1.3.1
+	sparkfun/SparkFun VL53L5CX Arduino Library@^1.0.3
+	madhephaestus/ESP32Encoder@^0.11.6
+
+[env:VLFodao_localiza_Inimigo]
+platform = espressif32
+board = esp32dev
+framework = arduino
+src_filter = +<examples/VLFodao_localiza_Inimigo>
 monitor_speed = 115200
 lib_deps = 
 	pololu/VL53L0X@^1.3.1
